# GLPlot

./: README.md  imgui.ini  pyproject.toml
examples/: ex_density.py  ex_density_gain.py  ex_expert_performance.py  ex_full_showcase.py  ex_mpl_bridge.py  ex_scatter.py  ex_simple.py  ex_v2_layers.py  ex_viewports.py  verify_polyline_cmap.py
glplot/: __init__.py  backend.py  controllers.py  engine.py  options.py  policy.py  pyplot.py
glplot/core/: context.py  layers.py  legacy.py
glplot/managers/: axis.py  effects.py  hud.py  hud_state.py  picking.py  renderer_manager.py
glplot/renderers/: axis.py  base.py  density.py  exact.py  interaction.py  line_family.py  patch.py  polyline.py  scatter.py  text.py
glplot/utils/: export.py  gl_utils.py  mpl_bridge.py  shaders.py
old/: backend.py
scratch/: check_gl_limits.py  check_imgui.py  diag_view.py  smoke_test.py  test_modular_export.py
tests/: test_backend.py  test_pyplot.py  verify_blending_extension.py  verify_density.py  verify_headless.py  verify_phase4.py  verify_phase5_density.py
